--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </div>
 
   <!-- Arquivo JS externo -->
-  <script src="script.js"></script>
+  <script src="java.js"></script>
 </body>
 </html>
 
