--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <header>
       <h1 id="site-title">Malu Girelli</h1>
-      <p class="subtitle" id="site-subtitle">Desenvolvedor & Designer</p>
+      <p class="subtitle" id="site-subtitle">Corajosa & Chorosa</p>
     </header>
 
     <!-- Navegação -->
@@ -126,4 +126,6 @@
   <script src="java.js"></script>
 </body>
 </html>
+
+
 
