--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       </div>
 
       <div id="trait1" class="tab-content active">
-        <h4 class="trait-title" id="trait-1-title">Criativo</h4>
-        <p class="trait-description" id="trait-1-desc">Sempre buscando soluções inovadoras e pensando fora da caixa. A criatividade é minha ferramenta para resolver problemas complexos.</p>
+        <h4 class="trait-title" id="trait-1-title">Carinhosa</h4>
+        <p class="trait-description" id="trait-1-desc">Sempre muitp carinhosa pemsando nas pessoas.</p>
       </div>
       <div id="trait2" class="tab-content">
         <h4 class="trait-title" id="trait-2-title">Determinado</h4>
