--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <header>
       <h1 id="site-title">Malu Girelli</h1>
-      <p class="subtitle" id="site-subtitle">Corajosa & Chorosa</p>
+      <p class="subtitle" id="site-subtitle">Corajosa & Chorona</p>
     </header>
 
     <!-- Navegação -->
@@ -30,15 +30,17 @@
     </nav>
 
     <!-- Seções -->
-    <section id="about" class="section active">
-      <div class="hero-section">
-        <div class="profile-photo">👤</div>
-        <div class="about-content">
-          <h2 class="section-title" id="about-title">Sobre Mim</h2>
-          <p class="about-text" id="about-text">
+  <div class="hero-section">
+    <div class="profile-photo">
+        <img src="caminho/para/sua/imagem.jpg" alt="Sua Foto de Perfil">
+    </div>
+    <div class="about-content">
+        <h2 class="section-title" id="about-title">Sobre Mim</h2>
+        <p class="about-text" id="about-text">
             Olá! Sou uma pessoa apaixonada por tecnologia e design. Adoro criar soluções que fazem a diferença na vida das pessoas. Sempre em busca de novos desafios e oportunidades de crescimento.
-          </p>
-        </div>
+        </p>
+    </div>
+</div>
       </div>
 
       <h3 class="section-title" id="personality-title">Minha Personalidade</h3>
@@ -50,7 +52,7 @@
 
       <div id="trait1" class="tab-content active">
         <h4 class="trait-title" id="trait-1-title">Carinhosa</h4>
-        <p class="trait-description" id="trait-1-desc">Sempre muitp carinhosa pemsando nas pessoas.</p>
+        <p class="trait-description" id="trait-1-desc">Ser uma pessoa carinhosa é algo que me faz sentir bem, porque acredito que os pequenos gestos de afeto têm um grande poder. Eu tento sempre estar atento às necessidades das pessoas ao meu redor, seja com um sorriso, um abraço apertado ou palavras que confortem. Gosto de criar um ambiente de carinho e compreensão, onde as pessoas se sintam à vontade para serem elas mesmas. Para mim, ser carinhoso não é apenas sobre gestos visíveis, mas também sobre estar presente e mostrar que me importo de verdade. Acredito que, quando somos carinhosos, conseguimos transformar o dia de alguém e tornar o mundo ao nosso redor mais leve..</p>
       </div>
       <div id="trait2" class="tab-content">
         <h4 class="trait-title" id="trait-2-title">Determinado</h4>
@@ -58,27 +60,43 @@
       </div>
       <div id="trait3" class="tab-content">
         <h4 class="trait-title" id="trait-3-title">Sociável</h4>
-        <p class="trait-description" id="trait-3-desc">Adoro conhecer pessoas e fazer novos amigos. Acredito que as melhores ideias surgem quando trabalhamos em equipe.</p>
+        <p class="trait-description" id="trait-3-desc">Eu sou uma pessoa que gosta de estar perto dos outros e de me conectar de forma genuína. Tento sempre ouvir com atenção e mostrar interesse pelo que as pessoas têm a dizer. Gosto de fazer com que as conversas fluam de forma leve, e para isso, me esforço em ser agradável e respeitar o espaço de cada um. Acho que ser sociável é sobre ser natural, sem forçar nada, e aproveitar o momento. Quando estou em grupo, tento me adaptar ao clima da conversa e me sentir à vontade, porque acredito que as melhores interações acontecem quando todos estão confortáveis.</p>
       </div>
     </section>
 
-    <section id="dreams" class="section">
-      <h2 class="section-title" id="dreams-title">Meus Sonhos</h2>
-      <div class="content-grid">
+   <section id="dreams" class="section">
+    <h2 class="section-title" id="dreams-title">Meus Sonhos</h2>
+    <div class="content-grid">
         <div class="content-card">
-          <h3 class="card-title">🌍 Viajar</h3>
-          <p class="card-text" id="dream-1">Viajar pelo mundo e conhecer novas culturas</p>
+            <h3 class="card-title">🌍 Viajar</h3>
+            <div class="card-images">
+                <img src="caminho/viagem1.jpg" alt="Foto de Viagem 1">
+                <img src="caminho/viagem2.jpg" alt="Foto de Viagem 2">
+                <img src="caminho/viagem3.jpg" alt="Foto de Viagem 3">
+            </div>
+            <p class="card-text" id="dream-1">Viajar pelo mundo e conhecer novas culturas</p>
         </div>
         <div class="content-card">
-          <h3 class="card-title">🏡 Casa</h3>
-          <p class="card-text" id="dream-2">Construir minha casa dos sonhos, bem aconchegante</p>
+            <h3 class="card-title">🏡 Casa</h3>
+            <div class="card-images">
+                <img src="caminho/casa1.jpg" alt="Foto de Casa 1">
+                <img src="caminho/casa2.jpg" alt="Foto de Casa 2">
+                <img src="caminho/casa3.jpg" alt="Foto de Casa 3">
+            </div>
+            <p class="card-text" id="dream-2">Construir minha casa dos sonhos, bem aconchegante</p>
         </div>
+        
         <div class="content-card">
-          <h3 class="card-title">📚 Aprender</h3>
-          <p class="card-text" id="dream-3">Aprender novos idiomas e habilidades</p>
+            <h3 class="card-title">📚 Aprender</h3>
+            <div class="card-images">
+                <img src="caminho/aprender1.jpg" alt="Foto de Aprender 1">
+                <img src="caminho/aprender2.jpg" alt="Foto de Aprender 2">
+                <img src="caminho/aprender3.jpg" alt="Foto de Aprender 3">
+            </div>
+            <p class="card-text" id="dream-3">Aprender novos idiomas e habilidades</p>
         </div>
-      </div>
-    </section>
+    </div>
+</section>
 
     <section id="studies" class="section">
       <h2 class="section-title" id="studies-title">Meus Estudos</h2>
