--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="content-card">
             <h3 class="card-title">🌍 Viajar</h3>
             <div class="card-images">
-                <img src="caminho/viagem1.jpg" alt="Foto de Viagem 1">
-                <img src="caminho/viagem2.jpg" alt="Foto de Viagem 2">
-                <img src="caminho/viagem3.jpg" alt="Foto de Viagem 3">
+                <img src="roma.jfif" alt="Foto de Viagem 1">
+                <img src="roma.jfif" alt="Foto de Viagem 2">
+                <img src="roma.jfif" alt="Foto de Viagem 3">
             </div>
             <p class="card-text" id="dream-1">Viajar pelo mundo e conhecer novas culturas</p>
         </div>
