--- a/index.html
+++ b/index.html
@@ -114,24 +114,29 @@
       </div>
     </section>
 
-    <section id="friends" class="section">
-      <h2 class="section-title" id="friends-title">Meus Amigos</h2>
-      <div class="simple-content">
-        <p class="simple-text" id="friends-text">
-          Amigos são a família que escolhemos. São aqueles que estão ao nosso lado nos momentos bons e ruins, que nos fazem rir e nos apoiam em nossos sonhos.
-        </p>
-      </div>
-    </section>
+<section id="friends" class="section">
+    <h2 class="section-title" id="friends-title">Meus Amigos</h2>
+    <div class="simple-content">
+        <p class="simple-text" id="friends-text">
+            Amigos são a família que escolhemos. São aqueles que estão ao nosso lado nos momentos bons e ruins, que nos fazem rir e nos apoiam em nossos sonhos.
+        </p>
+        <div class="friends-image-container">
+            <img src="caminho/para/sua/imagem-dos-amigos.jpg" alt="Foto dos Meus Amigos">
+        </div>
+        </div>
+</section>
 
     <section id="family" class="section">
-      <h2 class="section-title" id="family-title">Minha Família</h2>
-      <div class="simple-content">
-        <p class="simple-text" id="family-text">
-          A família é meu porto seguro, minha base e meu maior tesouro. São as pessoas que me conhecem de verdade e que sempre estarão presentes.
-        </p>
-      </div>
-   ...
-    </section>
+    <h2 class="section-title" id="family-title">Minha Família</h2>
+    <div class="simple-content">
+        <p class="simple-text" id="family-text">
+            A família é meu porto seguro, minha base e meu maior tesouro. São as pessoas que me conhecem de verdade e que sempre estarão presentes.
+        </p>
+        <div class="family-image-container">
+            <img src="caminho/para/sua/imagem-de-familia.jpg" alt="Foto da Minha Família">
+        </div>
+        </div>
+</section>
   </div> <script src="java.js"></script> 
 </body>
 </html>
