--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
   <div class="container">
    <header>
-    <h1 id="site-title">Meu Nome</h1>
+    <h1 id="site-title">Malu Girelli</h1>
     <nav>
      <button class="nav-btn active" data-page="about">Sobre Mim</button> 
      <button class="nav-btn" data-page="course">Meu Curso</button> 
@@ -119,13 +119,13 @@
      <h2 class="section-title" id="friends-title">Meus Amigos</h2>
      <p class="content-text" id="friends-text">Amigos são a família que escolhemos. Aqui estão as pessoas especiais que fazem parte da minha vida e tornam cada momento mais especial.</p>
      <div class="photo-grid">
-      <div class="photo-placeholder">
+      <div class="amigos.jpeg">
        <div>
         <div class="photo-icon">
          👥
         </div>
         <div>
-         Foto com amigos
+        foto 
         </div>
        </div>
       </div>
