--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
   <div class="container">
    <header>
-    <h1 id="site-title">Malu Girelli</h1>
+    <h1 id="site-title">Meu Nome</h1>
     <nav>
      <button class="nav-btn active" data-page="about">Sobre Mim</button> 
      <button class="nav-btn" data-page="course">Meu Curso</button> 
@@ -28,44 +28,16 @@
      <p class="content-text" id="about-text">Olá! Bem-vindo à minha página pessoal. Aqui você pode conhecer um pouco mais sobre mim, minha jornada, minhas paixões e o que me inspira todos os dias.</p>
      <div class="photo-grid">
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         📷
-        </div>
-        <div>
-         Sua foto
-        </div>
-       </div>
+        <img src="caminho/para/sua/foto-principal.jpg" alt="Sua foto principal" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🌟
-        </div>
-        <div>
-         Momentos especiais
-        </div>
-       </div>
+        <img src="caminho/para/sua/foto-momentos.jpg" alt="Momentos especiais" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         ✨
-        </div>
-        <div>
-         Suas conquistas
-        </div>
-       </div>
+        <img src="caminho/para/sua/foto-conquistas.jpg" alt="Suas conquistas" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         💫
-        </div>
-        <div>
-         Suas paixões
-        </div>
-       </div>
+        <img src="caminho/para/sua/foto-paixoes.jpg" alt="Suas paixões" class="photo-img">
       </div>
      </div>
     </div>
@@ -74,44 +46,16 @@
      <p class="content-text" id="course-text">Estou cursando uma área que me apaixona e que me permite crescer profissionalmente. Aqui compartilho momentos e experiências da minha vida acadêmica.</p>
      <div class="photo-grid">
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         📚
-        </div>
-        <div>
-         Foto do curso
-        </div>
-       </div>
+        <img src="caminho/para/curso-foto.jpg" alt="Foto do curso" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🎓
-        </div>
-        <div>
-         Foto da universidade
-        </div>
-       </div>
+        <img src="caminho/para/universidade-foto.jpg" alt="Foto da universidade" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         📖
-        </div>
-        <div>
-         Foto dos estudos
-        </div>
-       </div>
+        <img src="caminho/para/estudos-foto.jpg" alt="Foto dos estudos" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         ✏️
-        </div>
-        <div>
-         Projetos acadêmicos
-        </div>
-       </div>
+        <img src="caminho/para/projetos-foto.jpg" alt="Projetos acadêmicos" class="photo-img">
       </div>
      </div>
     </div>
@@ -119,45 +63,17 @@
      <h2 class="section-title" id="friends-title">Meus Amigos</h2>
      <p class="content-text" id="friends-text">Amigos são a família que escolhemos. Aqui estão as pessoas especiais que fazem parte da minha vida e tornam cada momento mais especial.</p>
      <div class="photo-grid">
-      <div class="amigos.jpeg">
-       <div>
-        <div class="photo-icon">
-         👥
-        </div>
-        <div>
-        foto 
-        </div>
-       </div>
+      <div class="photo-placeholder">
+        <img src="amigos.jpeg" alt="Foto com amigos" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🎉
-        </div>
-        <div>
-         Momentos especiais
-        </div>
-       </div>
+        <img src="caminho/para/amigos-momentos.jpg" alt="Momentos especiais com amigos" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🤝
-        </div>
-        <div>
-         Amizades
-        </div>
-       </div>
+        <img src="caminho/para/amizades-foto.jpg" alt="Amizades" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         😊
-        </div>
-        <div>
-         Bons momentos
-        </div>
-       </div>
+        <img src="caminho/para/bons-momentos-foto.jpg" alt="Bons momentos com amigos" class="photo-img">
       </div>
      </div>
     </div>
@@ -166,44 +82,16 @@
      <p class="content-text" id="family-text">A família é a base de tudo. Aqui compartilho um pouco sobre as pessoas que me apoiam, me inspiram e estão sempre ao meu lado.</p>
      <div class="photo-grid">
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         👨‍👩‍👧‍👦
-        </div>
-        <div>
-         Foto da família
-        </div>
-       </div>
+        <img src="caminho/para/familia-foto.jpg" alt="Foto da família" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         ❤️
-        </div>
-        <div>
-         Momentos em família
-        </div>
-       </div>
+        <img src="caminho/para/familia-momentos.jpg" alt="Momentos em família" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🏠
-        </div>
-        <div>
-         Reuniões familiares
-        </div>
-       </div>
+        <img src="caminho/para/reunioes-familiares.jpg" alt="Reuniões familiares" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🎊
-        </div>
-        <div>
-         Celebrações
-        </div>
-       </div>
+        <img src="caminho/para/celebracoes-familia.jpg" alt="Celebrações em família" class="photo-img">
       </div>
      </div>
     </div>
@@ -212,49 +100,21 @@
      <p class="content-text" id="dreams-text">Sonhar é essencial para crescer. Aqui compartilho minhas aspirações, objetivos e tudo aquilo que me motiva a seguir em frente todos os dias.</p>
      <div class="photo-grid">
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         ⭐
-        </div>
-        <div>
-         Objetivos
-        </div>
-       </div>
+        <img src="caminho/para/objetivos-foto.jpg" alt="Objetivos" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🎯
-        </div>
-        <div>
-         Metas
-        </div>
-       </div>
+        <img src="caminho/para/metas-foto.jpg" alt="Metas" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🌟
-        </div>
-        <div>
-         Inspirações
-        </div>
-       </div>
+        <img src="caminho/para/inspiracoes-foto.jpg" alt="Inspirações" class="photo-img">
       </div>
       <div class="photo-placeholder">
-       <div>
-        <div class="photo-icon">
-         🚀
-        </div>
-        <div>
-         Futuro
-        </div>
-       </div>
+        <img src="caminho/para/futuro-foto.jpg" alt="Futuro" class="photo-img">
       </div>
      </div>
     </div>
    </main>
   </div>
-  <script src="java.js"></script>
+  <script src="script.js"></script>
  </body>
 </html>
