--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
      <p class="content-text" id="about-text">Olá! Bem-vindo à minha página pessoal. Aqui você pode conhecer um pouco mais sobre mim, minha jornada, minhas paixões e o que me inspira todos os dias.</p>
      <div class="photo-grid">
       <div class="photo-placeholder">
-        <img src="caminho/para/sua/foto-principal.jpg" alt="Sua foto principal" class="photo-img">
+        <img src="foto perfil.enc" alt="Sua foto principal" class="photo-img">
       </div>
       <div class="photo-placeholder">
-        <img src="caminho/para/sua/foto-momentos.jpg" alt="Momentos especiais" class="photo-img">
+        <img src="niver.jpg" alt="Momentos especiais" class="photo-img">
       </div>
       <div class="photo-placeholder">
-        <img src="caminho/para/sua/foto-conquistas.jpg" alt="Suas conquistas" class="photo-img">
+        <img src="kumon.jpg" alt="Suas conquistas" class="photo-img">
       </div>
       <div class="photo-placeholder">
-        <img src="caminho/para/sua/foto-paixoes.jpg" alt="Suas paixões" class="photo-img">
+        <img src="paixao.jpg" alt="Suas paixões" class="photo-img">
       </div>
      </div>
     </div>
